crates/wasm-cli/tests/snapshots/test__install_help_snapshot.snap
---
source: crates/wasm-cli/tests/test.rs
expression: output
---
Install a dependency from an OCI registry

Usage: wasm install [OPTIONS] [COMPONENT]...

Arguments:
  [COMPONENT]...  Components to install. Accepts OCI references (e.g., ghcr.io/webassembly/wasi-logging:1.0.0) or manifest keys using scope:component syntax (e.g., wasi:logging). If no arguments are provided, installs all packages listed in the manifest

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
